# unmenu

./: .gitignore  FuzzyMatcher.swift  Makefile  README.md  build.sh  libfuzzylib.h
dmenu-mac.xcodeproj/: project.pbxproj
dmenu-mac.xcodeproj/xcshareddata/xcschemes/: dmenu-mac.xcscheme
fuzzylib/: Cargo.toml  README.md
fuzzylib/src/: lib.rs  main.rs
mac-app/: .gitignore  Config.swift  Keys.swift  build.sh  default_config.toml  keys.hpp  libfuzzylib.h
mac-app/dmenu-mac.xcodeproj/: project.pbxproj
mac-app/dmenu-mac.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
mac-app/dmenu-macTests/: dmenu_macTests.swift
mac-app/dmenu-unmacbp.xcodeproj/: project.pbxproj
mac-app/dmenu-unmacbp.xcodeproj/xcshareddata/xcschemes/: dmenu-mac.xcscheme
mac-app/src/: AppDelegate.swift  AppListProvider.swift  BridgingHeader.h  CommandArguments.swift  FuzzyMatcher.swift  InputField.swift  ListProvider.swift  Notification+Name.swift  PipeListProvider.swift  ReadStdin.h  ReadStdin.h.m  ResultsView.swift  SearchViewController.swift  SearchWindow.swift  SettingsViewController.swift  VerticalAlignedTextFieldCell.swift
mac-app/src/Assets.xcassets/AppIcon.appiconset/: Contents.json
mac-app/src/Base.lproj/: Main.storyboard
mac-app/unmenu.xcodeproj/: project.pbxproj
mac-app/unmenu.xcodeproj/xcshareddata/xcschemes/: unmenu.xcscheme
src/: AppDelegate.swift  AppListProvider.swift  BridgingHeader.h  FuzzyMatcher.swift  Matcher.swift  PipeListProvider.swift  SearchViewController.swift
(+8 files in other folders)
