[package]
name = "fuzzylib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
appkit-nsworkspace-bindings = "0.1.0"
cocoa = "0.25.0"
core-foundation = "0.9.3"
core-foundation-sys = "0.8.4"
core-services = "0.2.0"
fuzzy-matcher = "0.3.7"
libc = "0.2.147"
objc = "0.2.7"
objc-foundation = "0.1.1"
regex = "1.8.4"
serde = "1.0.164"
serde_derive = "1.0.164"
toml = "0.7.5"

[lib]
crate-type = ["staticlib"]

[[bin]]
name = "dmenu-cli"
path = "src/main.rs"

